--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -27,7 +30,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" /> -->
-    <title>React App</title>
+    <title>tell | Authority</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
